<resources>
    <string name="app_name" translatable="false">Intermediate_Submission</string>

    <string name="icon">icon</string>
    <string name="story">Story</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input">Username</string>
    <string name="description">Write your description</string>
    <string name="error_password">Password at least has 6 character</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">don\'t have an account ?</string>
    <string name="has_account">already have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_form_not_filled">Please fill all the form</string>
    <string name="error_description">Please fill the description</string>
    <string name="error_select_image">Please select an image</string>
    <string name="error_form_not_valid">Please fill all the form with correct format</string>
    <string name="error">Something went error</string>
    <string name="home">Home</string>
    <string name="new_story">New Story</string>
    <string name="profile">Profile</string>
    <string name="story_image">story image</string>
    <string name="user_icon">user icon</string>
    <string name="setting">Setting</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="choose_from_camera">Camera</string>
    <string name="upload_button">Upload Button</string>
    <string name="uploading">Uploading</string>
    <string name="add_story_success">Add story success</string>
    <string name="choose_picture">"Choose a Picture"</string>
    <string name="logout">Logout</string>
    <string name="detail">Detail</string>
    <string name="empty">No data</string>
    <string name="upload">Uploaded on %1$s</string>
    <string name="no_permission">Permission denied</string>
    <string name="widget_image">Widget Image</string>

    <string name="transition_image" translatable="false">image</string>
    <string name="transition_username" translatable="false">username</string>
    <string name="transition_description" translatable="false">description</string>
    <string name="transition_date" translatable="false">date</string>
    <string name="map">Map</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="title_activity_choose_location" translatable="false">ChooseLocationActivity</string>
    <string name="select_location">Location</string>
    <string name="your_location">Your location</string>
    <string name="select">select</string>
    <string name="please_select_your_location">"Please select your location"</string>
</resources>