<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detailAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/detail"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailAppbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/storyImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/talk"
                android:adjustViewBounds="true"
                app:layout_constraintDimensionRatio="1x1"
                tools:ignore="MissingConstraints"
                android:transitionName="@string/transition_image"
                android:contentDescription="@string/story_image" />

            <TextView
                android:id="@+id/storyUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:transitionName="@string/transition_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storyImage"
                tools:text="Ahmad Fathanah" />

            <TextView
                android:id="@+id/storyDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="description"
                android:textColor="@color/black2"
                android:textStyle="bold"
                android:transitionName="@string/transition_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/storyUsername" />

            <TextView
                android:id="@+id/storyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:transitionName="@string/transition_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyDesc"
                tools:text="06.07 PM · 16 Apr 2022" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>